<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailsFragment">

    <ImageView
        android:id="@+id/imageDetails"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:padding="@dimen/_6sdp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/detailsTitle"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/imageDetails"
        app:layout_constraintTop_toBottomOf="@id/imageDetails" />

    <TextView
        android:id="@+id/detailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/imageDetails"
        />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/year"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/imageDetails"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/detailsYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/years"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/Rated"
        app:layout_constraintTop_toBottomOf="@id/title"
        />

    <TextView
        android:id="@+id/Rated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/rated"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/imageDetails"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <TextView
        android:id="@+id/detailsRated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/rateds"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/Rated"
        app:layout_constraintTop_toBottomOf="@id/detailsYear"
        />

    <TextView
        android:id="@+id/Released"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/released"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/imageDetails"
        app:layout_constraintTop_toBottomOf="@id/Rated" />

    <TextView
        android:id="@+id/detailsReleased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/releaseds"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/Released"
        app:layout_constraintTop_toBottomOf="@id/detailsRated"
        />

    <TextView
        android:id="@+id/Runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/runtime"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/imageDetails"
        app:layout_constraintTop_toBottomOf="@id/Released" />

    <TextView
        android:id="@+id/detailsRuntime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/runtimes"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/Runtime"
        app:layout_constraintTop_toBottomOf="@id/Released"
        />

    <TextView
        android:id="@+id/Genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/genre"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/imageDetails"
        app:layout_constraintTop_toBottomOf="@id/Runtime" />

    <TextView
        android:id="@+id/detailsGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/genres"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/Genre"
        app:layout_constraintTop_toBottomOf="@id/Runtime"
        />

    <TextView
        android:id="@+id/Director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/director"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/imageDetails"
        app:layout_constraintTop_toBottomOf="@id/Genre" />

    <TextView
        android:id="@+id/detailsDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/directors"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/Director"
        app:layout_constraintTop_toBottomOf="@id/Genre"
        />

    <TextView
        android:id="@+id/Writer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/writer"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/imageDetails"
        app:layout_constraintTop_toBottomOf="@id/Director" />

    <TextView
        android:id="@+id/detailsWriter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/writers"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/Writer"
        app:layout_constraintTop_toBottomOf="@id/Director"
        />

    <TextView
        android:id="@+id/Actors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/actors"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/imageDetails"
        app:layout_constraintTop_toBottomOf="@id/Writer" />

    <TextView
        android:id="@+id/detailsActors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:text="@string/actorses"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/Actors"
        app:layout_constraintTop_toBottomOf="@id/Writer"
        />

</androidx.constraintlayout.widget.ConstraintLayout>